--- a/templates/index.html
+++ b/templates/index.html
@@ -16,7 +16,7 @@
                 <img src="{{icon}}" style="width: 64px; margin-right: 15px;" /> 
                 <div style="display: inline-block;">
                     <h1>{{title}}</h1>
-                    <span>Powered by <a href="https://github.com/sammwyy/net-uptime">Net Uptime</a></span>
+                    <span>Powered by <a href="https://github.com/iwojim0/net-uptime">Net Uptime</a></span>
                 </div>
             </div>
         </div>
